--- a/PA_C482/src/main/resources/thomasmccue/pa_c482/mainScreen.fxml
+++ b/PA_C482/src/main/resources/thomasmccue/pa_c482/mainScreen.fxml
@@ -15,7 +15,7 @@
       <Pane layoutX="46.0" layoutY="72.0">
          <children>
             <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#f5f5f500" height="272.0" stroke="BLACK" strokeType="INSIDE" width="430.0" />
-            <TableView layoutX="10.0" layoutY="51.0" prefHeight="171.0" prefWidth="411.0">
+            <TableView fx:id="partTable" layoutX="10.0" layoutY="51.0" prefHeight="171.0" prefWidth="411.0">
               <columns>
                 <TableColumn prefWidth="75.0" text="Part ID" />
                 <TableColumn prefWidth="97.0" text="Part Name" />
@@ -23,7 +23,7 @@
                   <TableColumn prefWidth="132.0" text="Price/Cost per Unit" />
               </columns>
             </TableView>
-            <TextField fx:id="partSearchBar" layoutX="261.0" layoutY="15.0" promptText="Search by Part ID or Name" />
+            <TextField fx:id="partSearchBar" layoutX="261.0" layoutY="15.0" onKeyTyped="#partSearch" promptText="Search by Part ID or Name" />
             <ButtonBar layoutX="171.0" layoutY="222.0" prefHeight="40.0" prefWidth="200.0">
               <buttons>
                 <Button fx:id="partAddButton" mnemonicParsing="false" onAction="#clickPartAdd" text="Add" />
@@ -53,7 +53,7 @@
                   <TableColumn prefWidth="129.0" text="Price/Cost per Unit" />
                </columns>
             </TableView>
-            <TextField fx:id="productSearchBar" layoutX="261.0" layoutY="17.0" promptText="Search by Part ID or Name" />
+            <TextField fx:id="productSearchBar" layoutX="261.0" layoutY="17.0" onAction="#onProductSearch" promptText="Search by Part ID or Name" />
             <ButtonBar layoutX="171.0" layoutY="222.0" prefHeight="40.0" prefWidth="200.0">
                <buttons>
                   <Button fx:id="productAddButton" mnemonicParsing="false" onAction="#clickProductAdd" text="Add" />
