--- a/PA_C482/src/main/resources/thomasmccue/pa_c482/addPart.fxml
+++ b/PA_C482/src/main/resources/thomasmccue/pa_c482/addPart.fxml
@@ -51,7 +51,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <TextField fx:id="idField" layoutX="213.0" layoutY="111.0" />
+      <TextField fx:id="idField" editable="false" layoutX="213.0" layoutY="111.0" />
       <TextField fx:id="nameField" layoutX="213.0" layoutY="151.0" />
       <TextField fx:id="invField" layoutX="213.0" layoutY="186.0" />
       <TextField fx:id="priceField" layoutX="213.0" layoutY="222.0" />
@@ -60,9 +60,14 @@
       <TextField fx:id="machineIdField" layoutX="213.0" layoutY="299.0" />
       <ButtonBar layoutX="283.0" layoutY="400.0" prefHeight="40.0" prefWidth="200.0">
         <buttons>
-          <Button fx:id="saveButton" mnemonicParsing="false" text="Save" />
+          <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveClicked" text="Save" />
             <Button fx:id="cancelButton" layoutX="140.0" layoutY="17.0" mnemonicParsing="false" onAction="#cancelClicked" text="Cancel" />
         </buttons>
       </ButtonBar>
+      <Label fx:id="errorMessage" layoutX="110.0" layoutY="355.0" textFill="#ee0000">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
