added part delete function

--- a/PA_C482/src/main/resources/thomasmccue/pa_c482/addPart.fxml
+++ b/PA_C482/src/main/resources/thomasmccue/pa_c482/addPart.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="addPartPane" prefHeight="545.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="thomasmccue.pa_c482.addPartController">
+<AnchorPane fx:id="addPartPane" prefHeight="545.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="thomasmccue.pa_c482.AddPartController">
    <children>
       <Label layoutX="83.0" layoutY="58.0" text="Add Part:">
          <font>
