--- a/PA_C482/src/main/resources/thomasmccue/pa_c482/modifyPart.fxml
+++ b/PA_C482/src/main/resources/thomasmccue/pa_c482/modifyPart.fxml
@@ -41,7 +41,7 @@
                 <Font name="System Bold" size="13.0" />
             </font>
         </Label>
-        <Label fx:id="MachineID" layoutX="110.0" layoutY="303.0" text="Machine ID">
+        <Label fx:id="changingLabel" layoutX="110.0" layoutY="303.0" text="Machine ID">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
@@ -51,18 +51,23 @@
                 <Font name="System Bold" size="13.0" />
             </font>
         </Label>
-        <TextField fx:id="idField" layoutX="221.0" layoutY="111.0" prefHeight="26.0" prefWidth="136.0" />
+        <TextField fx:id="idField" editable="false" layoutX="221.0" layoutY="111.0" prefHeight="26.0" prefWidth="136.0" />
         <TextField fx:id="nameField" layoutX="221.0" layoutY="150.0" prefHeight="26.0" prefWidth="136.0" />
         <TextField fx:id="invField" layoutX="221.0" layoutY="185.0" prefHeight="26.0" prefWidth="136.0" />
         <TextField fx:id="priceField" layoutX="221.0" layoutY="222.0" prefHeight="26.0" prefWidth="136.0" />
         <TextField fx:id="maxField" layoutX="221.0" layoutY="262.0" prefHeight="26.0" prefWidth="136.0" />
         <TextField fx:id="minField" layoutX="428.0" layoutY="263.0" prefHeight="26.0" prefWidth="136.0" />
-        <TextField fx:id="machineIDField" layoutX="221.0" layoutY="299.0" prefHeight="26.0" prefWidth="136.0" />
+        <TextField fx:id="machineIdField" layoutX="221.0" layoutY="299.0" prefHeight="26.0" prefWidth="136.0" />
         <ButtonBar layoutX="283.0" layoutY="400.0" prefHeight="40.0" prefWidth="200.0">
             <buttons>
-                <Button fx:id="saveButton" mnemonicParsing="false" text="Save" />
+                <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveClicked" text="Save" />
                 <Button fx:id="cancelButton" layoutX="140.0" layoutY="17.0" mnemonicParsing="false" onAction="#cancelClicked" text="Cancel" />
             </buttons>
         </ButtonBar>
+      <Label fx:id="errorMessage" layoutX="110.0" layoutY="373.0" textFill="RED">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
