--- a/PA_C482/src/main/resources/thomasmccue/pa_c482/addProduct.fxml
+++ b/PA_C482/src/main/resources/thomasmccue/pa_c482/addProduct.fxml
@@ -14,38 +14,39 @@
             </font>
         </Label>
         <Button layoutX="870.0" layoutY="400.0" mnemonicParsing="false" text="Exit" />
-          <TableView layoutX="534.0" layoutY="277.0" prefHeight="171.0" prefWidth="411.0">
+          <TableView fx:id="associatedPartTable2" layoutX="534.0" layoutY="277.0" prefHeight="171.0" prefWidth="411.0">
               <columns>
-                  <TableColumn prefWidth="75.0" text="Part ID" />
-                  <TableColumn prefWidth="97.0" text="Part Name" />
-                  <TableColumn prefWidth="106.0" text="Inventory Level" />
-                  <TableColumn prefWidth="132.0" text="Price/Cost per Unit" />
+                  <TableColumn fx:id="partIdColumn2" prefWidth="75.0" text="Part ID" />
+                  <TableColumn fx:id="partNameColumn2" prefWidth="97.0" text="Part Name" />
+                  <TableColumn fx:id="partInvColumn2" prefWidth="106.0" text="Inventory Level" />
+                  <TableColumn fx:id="partPriceColumn2" prefWidth="132.0" text="Price/Cost per Unit" />
               </columns>
           </TableView>
           <TextField fx:id="searchField" layoutX="785.0" layoutY="30.0" promptText="Search by Part ID or Name" />
-          <TableView layoutX="534.0" layoutY="60.0" prefHeight="171.0" prefWidth="411.0">
-              <columns>
-                  <TableColumn prefWidth="75.0" text="Product ID" />
-                  <TableColumn prefWidth="105.0" text="Product Name" />
-                  <TableColumn prefWidth="101.0" text="Inventory Level" />
-                  <TableColumn prefWidth="129.0" text="Price/Cost per Unit" />
-              </columns>
-          </TableView>
-      <Button fx:id="addButton" layoutX="845.0" layoutY="240.0" mnemonicParsing="false" text="Add" />
-      <Button fx:id="rapButton" layoutX="795.0" layoutY="459.0" mnemonicParsing="false" text="Remove Associated Part" />
-      <Button fx:id="saveButton" layoutX="795.0" layoutY="506.0" mnemonicParsing="false" text="Save" />
+      <Button fx:id="addButton" layoutX="845.0" layoutY="240.0" mnemonicParsing="false" onAction="#addPartClicked" text="Add" />
+      <Button fx:id="rapButton" layoutX="795.0" layoutY="459.0" mnemonicParsing="false" onAction="#rapButtonClicked" text="Remove Associated Part" />
+      <Button fx:id="saveButton" layoutX="795.0" layoutY="506.0" mnemonicParsing="false" onAction="#saveClicked" text="Save" />
       <Label layoutX="80.0" layoutY="137.0" text="ID" />
       <Label layoutX="80.0" layoutY="179.0" text="Name" />
       <Label layoutX="80.0" layoutY="223.0" text="Inv" />
       <Label layoutX="80.0" layoutY="320.0" text="Max" />
       <Label layoutX="300.0" layoutY="320.0" text="Min" />
       <Label layoutX="78.0" layoutY="269.0" text="Price" />
-      <TextField fx:id="idField" layoutX="158.0" layoutY="133.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField fx:id="idField" editable="false" layoutX="158.0" layoutY="133.0" prefHeight="26.0" prefWidth="94.0" />
       <TextField fx:id="nameField" layoutX="158.0" layoutY="175.0" prefHeight="26.0" prefWidth="94.0" />
       <TextField fx:id="invField" layoutX="158.0" layoutY="219.0" prefHeight="26.0" prefWidth="94.0" />
       <TextField fx:id="priceField" layoutX="158.0" layoutY="265.0" prefHeight="26.0" prefWidth="94.0" />
       <TextField fx:id="maxField" layoutX="158.0" layoutY="316.0" prefHeight="26.0" prefWidth="94.0" />
       <TextField fx:id="minField" layoutX="340.0" layoutY="316.0" prefHeight="26.0" prefWidth="94.0" />
       <Button fx:id="cancelButton" layoutX="889.0" layoutY="507.0" mnemonicParsing="false" onAction="#cancelClicked" text="Cancel" />
+      <TableView fx:id="associatedPartTable1" layoutX="534.0" layoutY="60.0" prefHeight="171.0" prefWidth="411.0">
+         <columns>
+            <TableColumn fx:id="partIdColumn1" prefWidth="75.0" text="Part ID" />
+            <TableColumn fx:id="partNameColumn1" prefWidth="97.0" text="Part Name" />
+            <TableColumn fx:id="partInvColumn1" prefWidth="106.0" text="Inventory Level" />
+            <TableColumn fx:id="partPriceColumn1" prefWidth="132.0" text="Price/Cost per Unit" />
+         </columns>
+      </TableView>
+      <Label fx:id="errorMessage" alignment="CENTER" contentDisplay="CENTER" layoutX="482.0" layoutY="458.0" prefHeight="71.0" prefWidth="303.0" textAlignment="CENTER" textFill="#fc0000" />
     </children>
 </AnchorPane>
