--- a/PA_C482/src/main/resources/thomasmccue/pa_c482/addProduct.fxml
+++ b/PA_C482/src/main/resources/thomasmccue/pa_c482/addProduct.fxml
@@ -22,7 +22,7 @@
                   <TableColumn fx:id="partPriceColumn2" prefWidth="132.0" text="Price/Cost per Unit" />
               </columns>
           </TableView>
-          <TextField fx:id="searchField" layoutX="785.0" layoutY="30.0" promptText="Search by Part ID or Name" />
+          <TextField fx:id="searchField" layoutX="785.0" layoutY="30.0" onAction="#partSearch" promptText="Search by Part ID or Name" />
       <Button fx:id="addButton" layoutX="845.0" layoutY="240.0" mnemonicParsing="false" onAction="#addPartClicked" text="Add" />
       <Button fx:id="rapButton" layoutX="795.0" layoutY="459.0" mnemonicParsing="false" onAction="#rapButtonClicked" text="Remove Associated Part" />
       <Button fx:id="saveButton" layoutX="795.0" layoutY="506.0" mnemonicParsing="false" onAction="#saveClicked" text="Save" />
@@ -47,6 +47,6 @@
             <TableColumn fx:id="partPriceColumn1" prefWidth="132.0" text="Price/Cost per Unit" />
          </columns>
       </TableView>
-      <Label fx:id="errorMessage" alignment="CENTER" contentDisplay="CENTER" layoutX="482.0" layoutY="458.0" prefHeight="71.0" prefWidth="303.0" textAlignment="CENTER" textFill="#fc0000" />
+      <Label fx:id="errorMessage" alignment="CENTER" contentDisplay="CENTER" layoutX="400.0" layoutY="458.0" prefHeight="71.0" prefWidth="385.0" textAlignment="CENTER" textFill="#fc0000" />
     </children>
 </AnchorPane>
